--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -114,15 +114,15 @@
           <img class="img-responsive" src="/adam.jpeg" />
           <p class="name">Adam Paszke</p>
           <p class="org">
-            Author and Maintainer of  <a href="https://pytorch.org/">PyTorch</a>.<br />
+            Author and Maintainer of  <a href="https://pytorch.org/">target="_blank"PyTorch</a>.<br />
           </p>
           <p class="website">
-            <a href="https://pytorch.org/">https://pytorch.org/</a>
+            <a href="https://pytorch.org/">target="_blank"https://pytorch.org/</a>
           </p>
         </div>
         <article class="col-sm-8">
           <p class="content">
-            Adam Paszke is an author and maintainer of <a href="https://pytorch.org/">PyTorch</a>
+            Adam Paszke is an author and maintainer of <a href="https://pytorch.org/">target="_blank"PyTorch</a>
             Despite being early in his career he already has a few years of experience working with large organizations
             like Facebook AI Research and NVIDIA.
             Currently, he pursues two majors — Computer Science and Mathematics — at the University of Warsaw.
@@ -135,12 +135,12 @@
           <img class="img-responsive" src="/katie.jpg" />
           <p class="name">Katie McLaughlin</p>
           <p class="org">
-            Cloud Developer Advocate <a href="https://www.google.org/">@google</a>.<br />
-            Director <a href="https://www.python.org/psf/">@Python Software Foundation</a>.<br />
-            Director <a href="https://www.djangoproject.com/foundation/">@Django Software Foundation</a>.<br />
+            Cloud Developer Advocate <a href="https://www.google.org/">target="_blank"@google</a>.<br />
+            Director <a href="https://www.python.org/psf/">target="_blank"@Python Software Foundation</a>.<br />
+            Director <a href="https://www.djangoproject.com/foundation/">target="_blank"@Django Software Foundation</a>.<br />
           </p>
           <p class="website">
-            <a href="https://www.google.org/">https://www.google.org/</a>
+            <a href="https://www.google.org/">target="_blank"https://www.google.org/</a>
           </p>
         </div>
         <article class="col-sm-8">
@@ -161,11 +161,11 @@
           <img class="img-responsive" src="/russell.png" />
           <p class="name">Dr Russell Keith-Magee</p>
           <p class="org">
-            Founding Apiarist at <a href="https://pybee.org">@pybeeware</a>.<br />
-            <a href="https://www.djangoproject.com/">@djangoproject</a> Core Developer
+            Founding Apiarist at <a href="https://pybee.org">target="_blank"@pybeeware</a>.<br />
+            <a href="https://www.djangoproject.com/">target="_blank"@djangoproject</a> Core Developer
           </p>
           <p class="website">
-            <a href="https://pybee.org">https://pybee.org</a>
+            <a href="https://pybee.org">target="_blank"https://pybee.org</a>
           </p>
         </div>
         <article class="col-sm-8">
@@ -173,7 +173,7 @@
             Dr Russell Keith-Magee is the founder of the <a href="https://pybee.org">BeeWare project</a>, developing
             GUI tools and libraries to support
             the development of Python software on desktop and mobile platforms. He is also a 13 year veteran of the
-            <a href="https://www.djangoproject.com/">Django</a> core team, and for 5 years, was
+            <a href="https://www.djangoproject.com/">target="_blank"Django</a> core team, and for 5 years, was
             President of the Django Software Foundation. In his day job,
             he wrangles data pipelines for Survata.<br/>
             He is a frequent speaker at Python and Django conferences around the globe, sharing his experiences as a
@@ -187,10 +187,10 @@
           <img class="img-responsive" src="/david_cournapeau3.png" />
           <p class="name">David Cournapeau</p>
           <p class="org">
-            Data Scientist/Author at <a href="https://scikit-learn.org/stable/">@scikit-learn</a>.<br />
+            Data Scientist/Author at <a href="https://scikit-learn.org/stable/">target="_blank"@scikit-learn</a>.<br />
           </p>
           <p class="website">
-            <a href="https://scikit-learn.org">https://scikit-learn.org</a>
+            <a href="https://scikit-learn.org">target="_blank"https://scikit-learn.org</a>
           </p>
         </div>
         <article class="col-sm-8">
@@ -342,12 +342,12 @@
           PARTNERS
         </h3>
         <div class="flex justify-between">
-          <a class="sponsors-link" href="http://www.truedigitalpark.com">
+          <a class="sponsors-link" href="http://www.truedigitalpark.com">target="_blank"
             <div class="sponsors-card">
               <img alt="" src="/logos-2009/partner-TDPK.png" />
             </div>
           </a>
-          <a class="sponsors-link" href="https://www.ticketmelon.com">
+          <a class="sponsors-link" href="https://www.ticketmelon.com">target="_blank"
             <div class="sponsors-card">
               <img alt="" src="/logos-2009/partner-ticketmelon.png" />
             </div>
