--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -114,7 +114,7 @@
           <img class="img-responsive" src="/adam.jpeg" />
           <p class="name">Adam Paszke</p>
           <p class="org">
-            Author and Maintainer of  <a href="https://pytorch.org/">PyTorch</a>.<br />
+            Author and Maintainer of  <a href="https://pytorch.org/" target="_blank">PyTorch</a>.<br />
           </p>
           <p class="website">
             <a href="https://pytorch.org/">https://pytorch.org/</a>
