--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -263,11 +263,6 @@
              <img alt="" src="/logos-2009/partner-TDPK.png" />
             </div>
           </a>
-          <a class="sponsors-link" href="#">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/300" />
-            </div>
-          </a>
         </div>
       </section>
       <section class="sponsors-section">
@@ -296,23 +291,13 @@
         <h3 class="sponsors-subhead">
           SILVER Sponsors
         </h3>
-        <!-- <div class="flex justify-between">
-          <a class="sponsors-link" href="">
+       <div class="flex justify-between">
+          <a class="sponsors-link" href="https://www.vizrt.com/contact/vizrt--thailand" target="_blank">
             <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/150" />
+              <img alt="" src="/logo-2009/silver-LOGO-VIZRT.png" />
             </div>
           </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/150" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/150" />
-            </div>
-          </a>
-        </div> -->
+        </div>
       </section>
       <section class="sponsors-section">
         <h3 class="sponsors-subhead">
@@ -349,11 +334,6 @@
           <a class="sponsors-link" href="https://www.ticketmelon.com" target="_blank">
             <div class="sponsors-card">
               <img alt="" src="/logos-2009/partner-ticketmelon.png" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
             </div>
           </a>
         </div>
