--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -303,23 +303,13 @@
         <h3 class="sponsors-subhead">
           INDIVIDUAL/STARTUPS
         </h3>
-        <!-- <div class="flex justify-between">
-          <a class="sponsors-link" href="">
+        <div class="flex justify-between">
+          <a class="sponsors-link" href="https://www.intelligent-bytes.com/" target="_blank">
             <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/100" />
+              <img alt="" src="/logos-2009/startup-IB.png" />
             </div>
           </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/100" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/100" />
-            </div>
-          </a>
-        </div>  -->
+        </div>
       </section>
       <section class="sponsors-section">
         <h3 class="sponsors-subhead">
