--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -220,7 +220,7 @@
           <h2 class="welcome-submission-title red-prepostline font-bold">
             WE WELCOME YOUR SUBMISSION!
           </h2>
-          <p class="welcome-submission-text text-sm">
+          <p class="welcome-submission-text text-large">
             Join our keynote speakers for the 2nd edition of Pycon Thailand.
           Submit your papers while you can! Closing date is coming soon: 24 May 2019
           </p>
@@ -243,15 +243,12 @@
       <section class="welcome-submission w-full">
         <div class="col-sm-12">
           <h2 class="welcome-submission-title red-prepostline font-bold">
-            SPONSORSHIP IS OPEN
+            OUR SPONSORS
           </h2>
           <p class="welcome-submission-text text-sm">
-            Limited sponsorship places available now
+            We thank all our sponsors and partners for their support. Pycon Thailand will not happen without them. 
           </p>
         </div>
-        <span href="#" class="btn-primary btn-lg get-ticket-btn">
-          {{% doc %}}Sponsorship{{% /doc %}}
-        </span>
       </section>
       <section class="sponsors-section">
         <h3 class="sponsors-subhead">
@@ -326,6 +323,12 @@
               <img alt="" src="/logos-2009/partner-ticketmelon.png" />
             </div>
           </a>
+            <p class="welcome-submission-text text-sm">
+            Limited sponsorship are still available. 
+          </p>
+          <span href="#" class="btn-primary btn-lg get-ticket-btn">
+          {{% doc %}}Sponsorship{{% /doc %}}
+        </span>
         </div>
       </section>
     </div>
