--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -291,7 +291,7 @@
        <div class="flex justify-between">
           <a class="sponsors-link" href="https://www.vizrt.com/contact/vizrt--thailand" target="_blank">
             <div class="sponsors-card">
-              <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" />
+              <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" width="150" />
             </div>
           </a>
         </div>
