--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -249,19 +249,20 @@
             We thank all our sponsors and partners for their support. Pycon Thailand will not happen without them. 
           </p>
         </div>
-      </section>
-      <section class="sponsors-section">
+       <section class="sponsors-section">
         <h3 class="sponsors-subhead">
           PLATINUM Sponsors
         </h3>
          <div class="flex justify-between">
           <a class="sponsors-link" href="http://www.truedigitalpark.com" target="_blank">
             <div class="sponsors-card">
-             <img alt="" src="/logos-2009/partner-TDPK.png" />
+             <img alt="" src="/logos-2009/partner-TDPK.png" width="300" />
             </div>
           </a>
         </div>
       </section>
+      </section>
+      
       <section class="sponsors-section">
         <h3 class="sponsors-subhead">
           GOLD Sponsors
@@ -303,7 +304,7 @@
         <div class="flex justify-between">
           <a class="sponsors-link" href="https://www.intelligent-bytes.com/" target="_blank">
             <div class="sponsors-card">
-              <img alt="" src="/logos-2009/startup-IB.png" />
+              <img alt="" src="/logos-2009/startup-IB.png" width="100" />
             </div>
           </a>
         </div>
@@ -315,12 +316,12 @@
         <div class="flex justify-between">
           <a class="sponsors-link" href="http://www.truedigitalpark.com" target="_blank">
             <div class="sponsors-card">
-              <img alt="" src="/logos-2009/partner-TDPK.png" />
+              <img alt="" src="/logos-2009/partner-TDPK.png" width="200"/>
             </div>
           </a>
           <a class="sponsors-link" href="https://www.ticketmelon.com" target="_blank">
             <div class="sponsors-card">
-              <img alt="" src="/logos-2009/partner-ticketmelon.png" />
+              <img alt="" src="/logos-2009/partner-ticketmelon.png" width="200" />
             </div>
           </a>
             <p class="welcome-submission-text text-sm">
