--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -238,105 +238,105 @@
 
 <!-- sponsor -->
 <section id="sponsors" class="section sponsor-section fp-auto-height">
-  <div class="container">
-    <div class="row">
-      <section class="welcome-submission w-full">
-        <div class="col-sm-12">
-          <h2 class="welcome-submission-title red-prepostline font-bold">
-            OUR SPONSORS
-          </h2>
-          <p class="welcome-submission-text text-sm">
-            We thank all our sponsors and partners for their support. Pycon Thailand will not happen without them. 
-          </p>
-        </div>
-       <section class="sponsors-section">
-        <h3 class="sponsors-subhead">
-          PLATINUM Sponsors
-        </h3>
-         <div class="flex justify-between">
-          <a class="sponsors-link" href="http://www.truedigitalpark.com" target="_blank">
-            <div class="sponsors-card">
-             <img alt="" src="/logos-2009/partner-TDPK.png" width="300" />
-            </div>
-          </a>
-        </div>
-      </section>
-           
-      <section class="sponsors-section">
-        <h3 class="sponsors-subhead">
-          GOLD Sponsors
-        </h3>
-        <!-- <div class="flex justify-between">
-          <a class="sponsors-link">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
-            </div>
-          </a>
-          <a class="sponsors-link">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
-            </div>
-          </a>
-        </div> -->
-      </section>
-      <section class="sponsors-section">
-        <h3 class="sponsors-subhead">
-          SILVER Sponsors
-        </h3>
-       <div class="flex justify-between">
-          <a class="sponsors-link" href="https://www.vizrt.com/contact/vizrt--thailand" target="_blank">
-            <div class="sponsors-card">
-              <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" width="150" />
-            </div>
-          </a>
-        </div>
-      </section>
-      <section class="sponsors-section">
-        <h3 class="sponsors-subhead">
-          INDIVIDUAL/STARTUPS
-        </h3>
-        <div class="flex justify-between">
-          <a class="sponsors-link" href="https://www.intelligent-bytes.com/" target="_blank">
-            <div class="sponsors-card">
-              <img alt="" src="/logos-2009/startup-IB.png" width="100" />
-            </div>
-          </a>
-        </div>
-      </section>
-      <section class="sponsors-section">
-        <h3 class="sponsors-subhead">
-          PARTNERS
-        </h3>
-        <div class="flex justify-between">
-          <a class="sponsors-link" href="http://www.truedigitalpark.com" target="_blank">
-            <div class="sponsors-card">
-              <img alt="" src="/logos-2009/partner-TDPK.png" width="200"/>
-            </div>
-          </a>
-          <a class="sponsors-link" href="https://www.ticketmelon.com" target="_blank">
-            <div class="sponsors-card">
-              <img alt="" src="/logos-2009/partner-ticketmelon.png" width="200" />
-            </div>
-          </a>
-      </section>
-   </br>
-            <p class="welcome-submission-text text-sm">
-            Limited sponsorship are still available. 
-          </p>
-          <span href="#" class="btn-primary btn-lg get-ticket-btn">
-          {{% doc %}}Sponsorship{{% /doc %}}
-        </span>
-        </div>
-      </section>
-    </div>
-  </div>
-</section>
+    <div class="container">
+        <div class="row">
+            <section class="welcome-submission w-full">
+                <div class="col-sm-12">
+                    <h2 class="welcome-submission-title red-prepostline font-bold">
+                        OUR SPONSORS
+                    </h2>
+                    <p class="welcome-submission-text text-sm">
+                        We thank all our sponsors and partners for their support. Pycon Thailand will not happen without
+                        them.
+                    </p>
+                </div>
+                <section class="sponsors-section">
+                    <h3 class="sponsors-subhead">
+                        PLATINUM Sponsors
+                    </h3>
+                    <div class="flex justify-between">
+                        <a class="sponsors-link" href="http://www.truedigitalpark.com" target="_blank">
+                            <div class="sponsors-card">
+                                <img alt="" src="/logos-2009/partner-TDPK.png" width="300" />
+                            </div>
+                        </a>
+                    </div>
+                </section>
 
+                <section class="sponsors-section">
+                    <h3 class="sponsors-subhead">
+                        GOLD Sponsors
+                    </h3>
+                    <!-- <div class="flex justify-between">
+            <a class="sponsors-link">
+              <div class="sponsors-card">
+                <img alt="" src="https://placeholder.pics/svg/200" />
+              </div>
+            </a>
+            <a class="sponsors-link">
+              <div class="sponsors-card">
+                <img alt="" src="https://placeholder.pics/svg/200" />
+              </div>
+            </a>
+            <a class="sponsors-link" href="">
+              <div class="sponsors-card">
+                <img alt="" src="https://placeholder.pics/svg/200" />
+              </div>
+            </a>
+          </div> -->
+                </section>
+                <section class="sponsors-section">
+                    <h3 class="sponsors-subhead">
+                        SILVER Sponsors
+                    </h3>
+                    <div class="flex justify-between">
+                        <a class="sponsors-link" href="https://www.vizrt.com/contact/vizrt--thailand" target="_blank">
+                            <div class="sponsors-card">
+                                <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" width="150" />
+                            </div>
+                        </a>
+                    </div>
+                </section>
+                <section class="sponsors-section">
+                    <h3 class="sponsors-subhead">
+                        INDIVIDUAL/STARTUPS
+                    </h3>
+                    <div class="flex justify-between">
+                        <a class="sponsors-link" href="https://www.intelligent-bytes.com/" target="_blank">
+                            <div class="sponsors-card">
+                                <img alt="" src="/logos-2009/startup-IB.png" width="100" />
+                            </div>
+                        </a>
+                    </div>
+                </section>
+                <section class="sponsors-section">
+                    <h3 class="sponsors-subhead">
+                        PARTNERS
+                    </h3>
+                    <div class="flex justify-between">
+                        <a class="sponsors-link" href="http://www.truedigitalpark.com" target="_blank">
+                            <div class="sponsors-card">
+                                <img alt="" src="/logos-2009/partner-TDPK.png" width="200" />
+                            </div>
+                        </a>
+                        <a class="sponsors-link" href="https://www.ticketmelon.com" target="_blank">
+                            <div class="sponsors-card">
+                                <img alt="" src="/logos-2009/partner-ticketmelon.png" width="200" />
+                            </div>
+                        </a>
+                </section>
+            </section>
+        </div>
+    </div>
+    <div>
+        <p class="welcome-submission-text text-sm">
+            Limited sponsorship are still available.
+        </p>
+        <span href="#" class="btn-primary btn-lg get-ticket-btn">
+            {{% doc %}}Sponsorship{{% /doc %}}
+        </span>
+    </div>
+</section>
 <script>
   // for countdown timer
   var targetDate = new Date("June 15, 2019 8:00:00").getTime();
