--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -211,7 +211,7 @@
   </div>
 </div>
 
-<!-- sponsor -->
+<!-- talks -->
 <section id="submission" class="section sponsor-section fp-auto-height">
   <div class="container">
     <div class="row">
@@ -329,7 +329,7 @@
         </div>
     </div>
     <div>
-        <p class="welcome-submission-text text-sm">
+        <p class="welcome-submission-text text-large">
             Limited sponsorship are still available.
         </p>
         <span href="#" class="btn-primary btn-lg get-ticket-btn">
