--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -246,7 +246,7 @@
                         OUR SPONSORS
                     </h2>
                     <p class="welcome-submission-text text-sm">
-                        We thank all our sponsors and partners for their support. Pycon Thailand will not happen without
+                      We thank all our sponsors and partners for their support. </br>Pycon Thailand will not happen without
                         them.
                     </p>
                 </div>
@@ -329,10 +329,10 @@
         </div>
     </div>
     <div>
-        <p class="welcome-submission-text text-large">
+        <p class="welcome-submission-text text-large" align="center">
             Limited sponsorship are still available.
         </p>
-        <span href="#" class="btn-primary btn-lg get-ticket-btn">
+        <span href="#" class="btn-primary btn-lg get-ticket-btn" align="center">
             {{% doc %}}Sponsorship{{% /doc %}}
         </span>
     </div>
