--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -246,8 +246,10 @@
                         OUR SPONSORS
                     </h2>
                     <p class="welcome-submission-text text-sm">
-                      We thank all our sponsors and partners for their support. </br>Pycon Thailand will not happen without
-                        them.
+                      We thank all our sponsors and partners for their support.
+                    </p>
+                  <p class="welcome-submission-text text-sm">
+                     Pycon Thailand will not happen without them.
                     </p>
                 </div>
                 <section class="sponsors-section">
@@ -332,7 +334,7 @@
         <p class="welcome-submission-text text-large" align="center">
             Limited sponsorship are still available.
         </p>
-        <span href="#" class="btn-primary btn-lg get-ticket-btn" align="center">
+        <span href="#" class="btn-primary btn-lg get-ticket-btn">
             {{% doc %}}Sponsorship{{% /doc %}}
         </span>
     </div>
