--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -245,10 +245,8 @@
                     <h2 class="welcome-submission-title red-prepostline font-bold">
                         OUR SPONSORS
                     </h2>
-                    <p class="welcome-submission-text text-sm">
+                    <p class="welcome-submission-text text-large">
                       We thank all our sponsors and partners for their support.
-                    </p>
-                  <p class="welcome-submission-text text-sm">
                      Pycon Thailand will not happen without them.
                     </p>
                 </div>
