--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -46,6 +46,38 @@
       class="upside-down-city"
       src="/upside-down-city2.png"
     />
+
+    <div class="flex my-16">
+      <div class="item">
+        <img alt="" src="https://placeholder.pics/svg/200x200" />
+        <h3>4 Keynotes</h3>
+        <p>
+          Enim tortor, at auctor urna nunc id cursus metus aliquam eleifend mi
+          in nulla posuere sollicitudin aliquam ultrices! Sollicitudin nibh sit
+          amet commodo nulla facilisi nullam vehicula ipsum a arcu.
+        </p>
+      </div>
+      <div class="item">
+        <img alt="" src="https://placeholder.pics/svg/200x200" />
+        <h3>26 Speakers</h3>
+        <p>
+          Vitae aliquet nec, ullamcorper sit amet risus nullam eget felis eget
+          nunc lobortis mattis aliquam faucibus purus in massa tempor nec. Porta
+          nibh venenatis cras sed felis eget velit aliquet!
+        </p>
+      </div>
+      <div class="item">
+        <img alt="" src="https://placeholder.pics/svg/200x200" />
+        <h3>2 Days</h3>
+        <p>
+          Gravida quis blandit turpis cursus in hac habitasse platea dictumst
+          quisque sagittis, purus. Arcu cursus vitae congue mauris rhoncus
+          aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque
+          habitant morbi tristique.
+        </p>
+      </div>
+    </div>
+
     <div class="news mx-auto -mt-6 max-w-md text-center">
       <h2 class="news-title red-followline italic mt-0">News</h2>
       <div class="schedule list-reset text-left text-lg">
