--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -47,7 +47,7 @@
       src="/upside-down-city2.png"
     />
 
-    <div class="flex my-16">
+    <div class="features">
       <div class="item">
         <img alt="" src="https://placeholder.pics/svg/200x200" />
         <h3>4 Keynotes</h3>
@@ -69,6 +69,16 @@
       <div class="item">
         <img alt="" src="https://placeholder.pics/svg/200x200" />
         <h3>2 Days</h3>
+        <p>
+          Gravida quis blandit turpis cursus in hac habitasse platea dictumst
+          quisque sagittis, purus. Arcu cursus vitae congue mauris rhoncus
+          aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque
+          habitant morbi tristique.
+        </p>
+      </div>
+      <div class="item">
+        <img alt="" src="https://placeholder.pics/svg/200x200" />
+        <h3>400 Pythonistas</h3>
         <p>
           Gravida quis blandit turpis cursus in hac habitasse platea dictumst
           quisque sagittis, purus. Arcu cursus vitae congue mauris rhoncus
