--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -139,9 +139,11 @@
         </div>
       </div>
       <h2 class="countdown-timer" id="countdown-timer"></h2>
-      <span class="btn-primary btn-lg get-ticket-btn">
-        <a href="https://th.pycon.org/en/buy-tickets/">Buy tickets</a>
-      </span>
+      <a
+        href="https://th.pycon.org/en/buy-tickets/"
+        class="btn-primary btn-lg get-ticket-btn"
+        >Buy tickets</a
+      >
     </div>
   </div>
 </div>
@@ -369,12 +371,12 @@
             May 2019
           </p>
         </div>
-        <span
+        <a
           href="https://www.papercall.io/pyconth19"
           class="btn-primary btn-lg get-ticket-btn"
         >
-          <a href="https://www.papercall.io/pyconth19">Submit Talk</a>
-        </span>
+          Submit Talk</a
+        >
       </section>
     </div>
   </div>
@@ -502,12 +504,14 @@
     </div>
   </div>
   <div>
-    <p class="welcome-submission-text text-large" align="center">
-      Limited sponsorship are still available.
-    </p>
-    <span href="#" class="btn-primary btn-lg get-ticket-btn">
-      {{% doc %}}Sponsorship{{% /doc %}}
-    </span>
+    <div class="text-center">
+      <p class="welcome-submission-text text-center">
+        Limited sponsorship are still available.
+      </p>
+      <a href="/en/sponsorship" class="btn-primary btn-lg get-ticket-btn">
+        Sponsorship
+      </a>
+    </div>
   </div>
 </section>
 <script>
