Adjust sponsors sizes

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -402,7 +402,7 @@
           </h3>
           <div class="flex justify-between">
             <a
-              class="sponsors-link"
+              class="sponsors-link sponsors-link--platinum"
               href="http://www.truedigitalpark.com"
               target="_blank"
             >
@@ -441,16 +441,12 @@
           </h3>
           <div class="flex justify-between">
             <a
-              class="sponsors-link"
+              class="sponsors-link sponsors-link--silver"
               href="https://www.vizrt.com/contact/vizrt--thailand"
               target="_blank"
             >
               <div class="sponsors-card">
-                <img
-                  alt=""
-                  src="/logos-2009/silver-LOGO-VIZRT.png"
-                  width="150"
-                />
+                <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" />
               </div>
             </a>
           </div>
@@ -461,12 +457,12 @@
           </h3>
           <div class="flex justify-between">
             <a
-              class="sponsors-link"
+              class="sponsors-link sponsors-link--individual"
               href="https://www.intelligent-bytes.com/"
               target="_blank"
             >
               <div class="sponsors-card">
-                <img alt="" src="/logos-2009/startup-IB.png" width="100" />
+                <img alt="" src="/logos-2009/startup-IB.png" />
               </div>
             </a>
           </div>
@@ -475,27 +471,23 @@
           <h3 class="sponsors-subhead">
             PARTNERS
           </h3>
-          <div class="flex justify-between">
+          <div class="flex justify-between items-center">
             <a
-              class="sponsors-link"
+              class="sponsors-link sponsors-link--partner"
               href="http://www.truedigitalpark.com"
               target="_blank"
             >
               <div class="sponsors-card">
-                <img alt="" src="/logos-2009/partner-TDPK.png" width="200" />
+                <img alt="" src="/logos-2009/partner-TDPK.png" />
               </div>
             </a>
             <a
-              class="sponsors-link"
+              class="sponsors-link sponsors-link--partner"
               href="https://www.ticketmelon.com"
               target="_blank"
             >
               <div class="sponsors-card">
-                <img
-                  alt=""
-                  src="/logos-2009/partner-ticketmelon.png"
-                  width="200"
-                />
+                <img alt="" src="/logos-2009/partner-ticketmelon.png" />
               </div>
             </a>
           </div>
