Fix sponsors page

--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -4,39 +4,27 @@
 </p>
 
 <section class="sponsors-section">
-  <h3 class="sponsors-subhead">
+  <h3 class="sponsors-subhead sponsors-subhead--black">
     PLATINUM Sponsors
   </h3>
-  <!-- <div class="flex justify-between">
-          <a class="sponsors-link" href="#">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/300" />
-            </div>
-          </a>
-
-          <a class="sponsors-link" href="#">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/300" />
-            </div>
-          </a>
-        </div> -->
+  <div class="flex justify-between">
+    <a
+      class="sponsors-link sponsors-link--platinum"
+      href="http://www.truedigitalpark.com"
+      target="_blank"
+    >
+      <div class="sponsors-card">
+        <img alt="" src="/logos-2009/partner-TDPK.png" width="300" />
+      </div>
+    </a>
+  </div>
 </section>
 <section class="sponsors-section">
-  <h3 class="sponsors-subhead">
+  <h3 class="sponsors-subhead sponsors-subhead--black">
     GOLD Sponsors
   </h3>
   <!-- <div class="flex justify-between">
-          <a class="sponsors-link">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
-            </div>
-          </a>
-          <a class="sponsors-link">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
+          <a class="sponsors-link sponsors-link--gold">
             <div class="sponsors-card">
               <img alt="" src="https://placeholder.pics/svg/200" />
             </div>
@@ -44,70 +32,62 @@
         </div> -->
 </section>
 <section class="sponsors-section">
-  <h3 class="sponsors-subhead">
+  <h3 class="sponsors-subhead sponsors-subhead--black">
     SILVER Sponsors
   </h3>
-  <!-- <div class="flex justify-between">
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/150" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/150" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/150" />
-            </div>
-          </a>
-        </div> -->
+  <div class="flex justify-between">
+    <a
+      class="sponsors-link sponsors-link--silver"
+      href="https://www.vizrt.com/contact/vizrt--thailand"
+      target="_blank"
+    >
+      <div class="sponsors-card">
+        <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" />
+      </div>
+    </a>
+  </div>
 </section>
 <section class="sponsors-section">
-  <h3 class="sponsors-subhead">
+  <h3 class="sponsors-subhead sponsors-subhead--black">
     INDIVIDUAL/STARTUPS
   </h3>
-  <!-- <div class="flex justify-between">
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/100" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/100" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/100" />
-            </div>
-          </a>
-        </div>  -->
+  <div class="flex justify-between">
+    <a
+      class="sponsors-link sponsors-link--individual"
+      href="https://www.intelligent-bytes.com/"
+      target="_blank"
+    >
+      <div class="sponsors-card">
+        <img alt="" src="/logos-2009/startup-IB.png" />
+      </div>
+    </a>
+  </div>
 </section>
 <section class="sponsors-section">
-  <h3 class="sponsors-subhead">
+  <h3 class="sponsors-subhead sponsors-subhead--black">
     PARTNERS
   </h3>
-  <!-- <div class="flex justify-between">
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
-            </div>
-          </a>
-        </div> -->
+
+  <div class="flex justify-between items-center">
+    <a
+      class="sponsors-link sponsors-link--partner"
+      href="http://www.truedigitalpark.com"
+      target="_blank"
+    >
+      <div class="sponsors-card">
+        <img alt="" src="/logos-2009/partner-TDPK.png" />
+      </div>
+    </a>
+    <a
+      class="sponsors-link sponsors-link--partner"
+      href="https://www.ticketmelon.com"
+      target="_blank"
+    >
+      <div class="sponsors-card">
+        <img alt="" src="/logos-2009/partner-ticketmelon.png" />
+      </div>
+    </a>
+  </div>
 </section>
 
 <p>
