Fix sponsors section TH

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -396,6 +396,7 @@
             Thailand will not happen without them.
           </p>
         </div>
+
         <section class="sponsors-section">
           <h3 class="sponsors-subhead">
             PLATINUM Sponsors
@@ -435,6 +436,7 @@
             </a>
           </div> -->
         </section>
+
         <section class="sponsors-section">
           <h3 class="sponsors-subhead">
             SILVER Sponsors
@@ -451,6 +453,7 @@
             </a>
           </div>
         </section>
+
         <section class="sponsors-section">
           <h3 class="sponsors-subhead">
             INDIVIDUAL/STARTUPS
@@ -467,6 +470,7 @@
             </a>
           </div>
         </section>
+
         <section class="sponsors-section">
           <h3 class="sponsors-subhead">
             PARTNERS
@@ -482,7 +486,7 @@
               </div>
             </a>
             <a
-              class="sponsors-link sponsors-link--partner"
+              class="sponsors-link"
               href="https://www.ticketmelon.com"
               target="_blank"
             >
