--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -237,118 +237,118 @@
           </h2>
         </div>
       </section>
-      <section class="sponsors-section">
-        <h3 class="sponsors-subhead">
-          PLATINUM Sponsors
-        </h3>
-        <!-- <div class="flex justify-between">
-          <a class="sponsors-link" href="#">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/300" />
-            </div>
-          </a>
 
-          <a class="sponsors-link" href="#">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/300" />
-            </div>
-          </a>
-        </div> -->
-      </section>
-      <section class="sponsors-section">
-        <h3 class="sponsors-subhead">
-          GOLD Sponsors
-        </h3>
-        <!-- <div class="flex justify-between">
-          <a class="sponsors-link">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
-            </div>
-          </a>
-          <a class="sponsors-link">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
-            </div>
-          </a>
-        </div> -->
-      </section>
-      <section class="sponsors-section">
-        <h3 class="sponsors-subhead">
-          SILVER Sponsors
-        </h3>
-        <!-- <div class="flex justify-between">
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/150" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/150" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/150" />
-            </div>
-          </a>
-        </div> -->
-      </section>
-      <section class="sponsors-section">
-        <h3 class="sponsors-subhead">
-          INDIVIDUAL/STARTUPS
-        </h3>
-        <!-- <div class="flex justify-between">
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/100" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/100" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/100" />
-            </div>
-          </a>
-        </div>  -->
-      </section>
-      <section class="sponsors-section">
-        <h3 class="sponsors-subhead">
-          PARTNERS
-        </h3>
-        <!-- <div class="flex justify-between">
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
-            </div>
-          </a>
-          <a class="sponsors-link" href="">
-            <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
-            </div>
-          </a>
-        </div> -->
-      </section>
-      <span href="#" class="btn-primary btn-lg get-ticket-btn mx-auto my-4">
-        {{% doc %}}Sponsorship{{% /doc %}}
-      </span>
-        <p class="welcome-submission-text text-sm mx-auto">
-            Check out our sponsorship packages!
-          </p>
+
+        <section class="sponsors-section">
+          <h3 class="sponsors-subhead">
+            PLATINUM Sponsors
+          </h3>
+          <div class="flex justify-between">
+            <a
+              class="sponsors-link sponsors-link--platinum"
+              href="http://www.truedigitalpark.com"
+              target="_blank"
+            >
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/partner-TDPK.png" width="300" />
+              </div>
+            </a>
+          </div>
+        </section>
+
+        <section class="sponsors-section">
+          <h3 class="sponsors-subhead">
+            GOLD Sponsors
+          </h3>
+          <!-- <div class="flex justify-between">
+            <a class="sponsors-link">
+              <div class="sponsors-card">
+                <img alt="" src="https://placeholder.pics/svg/200" />
+              </div>
+            </a>
+            <a class="sponsors-link">
+              <div class="sponsors-card">
+                <img alt="" src="https://placeholder.pics/svg/200" />
+              </div>
+            </a>
+            <a class="sponsors-link" href="">
+              <div class="sponsors-card">
+                <img alt="" src="https://placeholder.pics/svg/200" />
+              </div>
+            </a>
+          </div> -->
+        </section>
+
+        <section class="sponsors-section">
+          <h3 class="sponsors-subhead">
+            SILVER Sponsors
+          </h3>
+          <div class="flex justify-between">
+            <a
+              class="sponsors-link sponsors-link--silver"
+              href="https://www.vizrt.com/contact/vizrt--thailand"
+              target="_blank"
+            >
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/silver-LOGO-VIZRT.png" />
+              </div>
+            </a>
+          </div>
+        </section>
+
+        <section class="sponsors-section">
+          <h3 class="sponsors-subhead">
+            INDIVIDUAL/STARTUPS
+          </h3>
+          <div class="flex justify-between">
+            <a
+              class="sponsors-link sponsors-link--individual"
+              href="https://www.intelligent-bytes.com/"
+              target="_blank"
+            >
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/startup-IB.png" />
+              </div>
+            </a>
+          </div>
+        </section>
+
+        <section class="sponsors-section">
+          <h3 class="sponsors-subhead">
+            PARTNERS
+          </h3>
+          <div class="flex justify-between items-center">
+            <a
+              class="sponsors-link sponsors-link--partner"
+              href="http://www.truedigitalpark.com"
+              target="_blank"
+            >
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/partner-TDPK.png" />
+              </div>
+            </a>
+            <a
+              class="sponsors-link"
+              href="https://www.ticketmelon.com"
+              target="_blank"
+            >
+              <div class="sponsors-card">
+                <img alt="" src="/logos-2009/partner-ticketmelon.png" />
+              </div>
+            </a>
+          </div>
+        </section>
+
+    </div>
+    <div>
+        <div class="text-center">
+            <p class="welcome-submission-text text-center">
+                Limited sponsorship are still available.
+            </p>
+            <a href="/sponsorship" class="btn-primary btn-lg get-ticket-btn">
+                Sponsorship
+            </a>
+        </div>
     </div>
   </div>
 </section>
